k8s/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-server-service
spec:
  selector:
    app: flask-server
  type: LoadBalancer
  ports:
    - protocol: 'TCP'
      port: 5000
      targetPort: 5000
